--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -117,7 +117,7 @@ jobs:
           solution-target-folder: ${{ env.TARGET_FOLDER }}/${{ env.SOLUTION_NAME }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           allow-empty-commit: true
-          branch-name: ${{ env.BRANCH_NAME }}
+          # branch-name: ${{ env.BRANCH_NAME }}
 
       - name: Create PR
         uses: actions/github-script@v7
