--- a/.github/workflows/release-solution.yml
+++ b/.github/workflows/release-solution.yml
@@ -1,111 +1,96 @@
-name: release-solution
-on:
-  workflow_dispatch:
-    inputs:
-      solution_name:
-        description: 'name of the solution to worked on from Power Platform'
-        required: true
-        default: HealthcareSystem
-      solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'
-        required: true
-        default: out/ship/
-      solution_outbound_folder:
-        description: 'staging the unpacked solution folder before check-in *do not change*'
-        required: true
-        default: out/solutions/
-      solution_source_folder:
-       description: 'folder name to be created and checked in *do not change*'
-       required: true
-       default: solutions/
-      solution_release_folder:
-       description: 'folder where the released binaries are going to be hosted *do not change*'
-       required: true
-       default: out/release
-  # release:
-  #   types: [created]
-
+name: release-on-merge
 
 permissions:
   contents: write
+  pull-requests: read
+
+on:
+  pull_request:
+    types: [closed]
+
 jobs:
-  convert-to-managed:
-    environment: philips-build
+  release:
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
     env:
-      RUNNER_DEBUG: 1
-
+      SOLUTION_SOURCE_FOLDER: solutions
+      SOLUTION_OUTBOUND_FOLDER: out/packed
     steps:
-    - uses: actions/checkout@v4
-      with:
-        lfs: true
+      - name: Checkout merge commit
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: 0
 
-    - name: Install Power Platform Tools
-      uses: microsoft/powerplatform-actions/actions-install@v1
+      - name: Extract solution metadata block
+        id: meta
+        run: |
+          set -euo pipefail
+          body='${{ github.event.pull_request.body }}'
+          json=$(printf "%s" "$body" | awk '/<!--POWER_SOLUTION_METADATA_START-->/, /<!--POWER_SOLUTION_METADATA_END-->/' | sed -e '1d;$d')
+          echo "$json"
+          echo "$json" > metadata.json
+          solution=$(jq -r '.solution' metadata.json 2>/dev/null || echo HealthcareSystem)
+          version=$(jq -r '.version'  metadata.json 2>/dev/null || echo 1.0.0.0)
 
-    - name: Pack solution
-      uses: microsoft/powerplatform-actions/pack-solution@v1
-      with:
-        solution-folder: ${{ github.event.inputs.solution_source_folder}}/${{ github.event.inputs.solution_name }}
-        solution-file: ${{ github.event.inputs.solution_outbound_folder}}/${{ github.event.inputs.solution_name }}.zip
-        solution-type: Unmanaged
+          if [ -z "$version" ] || ! [[ "$version" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Version missing or invalid, defaulting to 1.0.0.0"
+            version=1.0.0.0
+          fi
 
-    - name: Import solution as unmanaged to build env
-      uses: microsoft/powerplatform-actions/import-solution@v1
-      with:
-        environment-url: ${{secrets.POWERPLATFORM_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.CLIENT_SECRET }}
-        tenant-id: ${{secrets.TENANT_ID}}
-        solution-file: ${{ github.event.inputs.solution_outbound_folder}}/${{ github.event.inputs.solution_name }}.zip
-        force-overwrite: true
-        publish-changes: true
+          echo "solution=$solution" >> $GITHUB_OUTPUT
+          echo "version=$version" >> $GITHUB_OUTPUT
+          echo "Resolved: solution=$solution version=$version"
 
-    - name: Export solution as managed
-      uses: microsoft/powerplatform-actions/export-solution@v1
-      with:
-        environment-url: ${{secrets.POWERPLATFORM_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.CLIENT_SECRET }}
-        tenant-id: ${{secrets.TENANT_ID}}
-        solution-name: ${{ github.event.inputs.solution_name }}
-        managed: true
-        solution-output-file: ${{ github.event.inputs.solution_shipping_folder}}/${{ github.event.inputs.solution_name }}.zip
+      - name: Verify solution source folder
+        run: |
+          set -e
+          path="${SOLUTION_SOURCE_FOLDER}/${{ steps.meta.outputs.solution }}"
+          if [ ! -d "$path" ]; then
+            echo "Expected solution folder not found: $path"
+            ls -R .
+            exit 1
+          fi
+          echo "Found solution folder: $path"
 
-    - name: Upload the ready to ship solution to GH artifact store
-      uses: actions/upload-artifact@v4
-      with:
-        name: managedSolutions
-        path: ${{ github.event.inputs.solution_shipping_folder}}/${{ github.event.inputs.solution_name }}.zip
+      - name: Prepare outbound folder
+        run: mkdir -p "$SOLUTION_OUTBOUND_FOLDER"
 
-  release-to-prod:
-    needs: [ convert-to-managed ]
-    environment: philips-prod    
-    runs-on: ubuntu-latest
-    env:
-      RUNNER_DEBUG: 1
+      - name: Install Power Platform Tools
+        uses: microsoft/powerplatform-actions/actions-install@v1
 
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        lfs: true
+      - name: Pack solution (managed)
+        uses: microsoft/powerplatform-actions/pack-solution@v1
+        with:
+          solution-folder: ${{ env.SOLUTION_SOURCE_FOLDER }}/${{ steps.meta.outputs.solution }}
+          solution-file: ${{ env.SOLUTION_OUTBOUND_FOLDER }}/${{ steps.meta.outputs.solution }}.zip
+          solution-type: Managed
 
-    - name: Install Power Platform Tools
-      uses: microsoft/powerplatform-actions/actions-install@v1
+      - name: Create tag (if absent)
+        run: |
+          set -euo pipefail
+          git config user.name "github-actions"
+          git config user.email "actions@users.noreply.github.com"
+          tag="v${{ steps.meta.outputs.version }}"
+          if git rev-parse -q --verify "refs/tags/$tag" >/dev/null; then
+            echo "Tag $tag already exists locally."
+          else
+            git tag -a "$tag" -m "Release ${{ steps.meta.outputs.solution }} v${{ steps.meta.outputs.version }}"
+          fi
+          if git ls-remote --tags origin | grep -q "refs/tags/$tag$"; then
+            echo "Tag $tag already exists on remote, skipping push."
+          else
+            git push origin "$tag"
+          fi
 
-    - name: Fetch the ready to ship solution from GH artifact store
-      uses: actions/download-artifact@v4
-      with:
-        name: managedSolutions
-        path: out/release/
-
-    - name: Import solution to prod env
-      uses: microsoft/powerplatform-actions/import-solution@v1
-      with:
-        environment-url: ${{secrets.POWERPLATFORM_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.CLIENT_SECRET }}
-        tenant-id: ${{secrets.TENANT_ID}}
-        solution-file: ${{ github.event.inputs.solution_release_folder}}/${{ github.event.inputs.solution_name }}.zip
-        force-overwrite: true
-        publish-changes: true
+      - name: Create GitHub release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.meta.outputs.version }}
+          name: "${{ steps.meta.outputs.solution }} v${{ steps.meta.outputs.version }}"
+          body: |
+            Automated release from merged PR #${{ github.event.pull_request.number }}
+          files: |
+            ${{ env.SOLUTION_OUTBOUND_FOLDER }}/${{ steps.meta.outputs.solution }}.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
