--- a/.github/workflows/release-all-in-one-cn.yml
+++ b/.github/workflows/release-all-in-one-cn.yml
@@ -82,7 +82,6 @@ jobs:
           tenant-id: ${{ secrets.TENANT_ID }}
           name: ${{ env.SOLUTION_NAME }}
           version: ${{ env.SOLUTION_VERSION }}
-          cloud: China
 
       - name: Export solution (managed)
         uses: microsoft/powerplatform-actions/export-solution@v1
@@ -110,7 +109,7 @@ jobs:
 
   release-to-prod:
     needs: [export-solution]
-    environment: philips-prod
+    environment: philips-prod-cn
     runs-on: ubuntu-latest
     env:
       SOLUTION_NAME: ${{ needs.export-solution.outputs.solution_name }}
