--- a/.github/workflows/export-and-branch-solution-cn.yml
+++ b/.github/workflows/export-and-branch-solution-cn.yml
@@ -17,7 +17,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  export-and-branch:
+  export-and-branch-cn:
     environment: philips-dev-cn
     runs-on: ubuntu-latest
 
