--- a/.github/workflows/build-pluginpoc.yml
+++ b/.github/workflows/build-pluginpoc.yml
@@ -50,6 +50,8 @@ jobs:
 
       - name: Install Power Platform Tools
         uses: microsoft/powerplatform-actions/actions-install@v1
+        with:
+          add-tools-to-path: true
 
       - name: Deploy
         shell: pwsh
